// Code generated by mojo. DO NOT EDIT.

syntax = "proto3";

package prenatal.v1;

import "mojo/core/null.proto";
import "mojo/mojo.proto";
import "prenatal/answer.proto";
import "prenatal/question.proto";

option go_package = "github.com/liankui/prenatal/go/pkg/prenatal/v1;prenatal";
option java_multiple_files = true;
option java_outer_classname = "QuizProto";
option java_package = "prenatal.v1";

message CreateQuestionRequest {
    prenatal.Question question = 1;
}

message GetQuestionRequest {
    string id = 1;
}

message UpdateQuestionRequest {
    string id = 1;
    prenatal.Question question = 2;
}

message DeleteQuestionRequest {
    string id = 1;
}

message CreateAnswerRequest {
    prenatal.Answer answer = 1;
}

service Quiz {
    rpc create_question(CreateQuestionRequest) returns (prenatal.Question);
    rpc get_question(GetQuestionRequest) returns (prenatal.Question);
    rpc update_question(UpdateQuestionRequest) returns (prenatal.Question);
    rpc delete_question(DeleteQuestionRequest) returns (mojo.core.Null);
    rpc create_answer(CreateAnswerRequest) returns (prenatal.Answer);
}